# service_status_indicator_api

./: CONTRIBUTING.md  README.md  install.sh  pyproject.toml  uninstall.sh
examples/: add-predefined-services.sh  predefined-services.json  services.json
examples/scripts/: checks-simplest-service.sh  checks-system-updates.sh
src/: database.py  logger.py  models.py  scheduler.py  server_status_indicator_api.py  service-status-indicator-api.service  service_status_indicator_api.py  start-server.sh  wsgi.py
